--- a/src/Pages/Contact/Contact.css
+++ b/src/Pages/Contact/Contact.css
@@ -1,12 +1,12 @@
 .contact-container {
   width: 90%;
   max-width: 100%;
-  height: 700px;
+  height: 635px;
   padding: 15px;
   margin: auto;
-  margin-top: 20px;
+  margin-top: 10px;
   box-sizing: border-box;
-  background-color: #999999;
+  /* background-color: #999999; */
   border-radius: 20px;
 }
 
@@ -70,6 +70,21 @@ label {
     margin-left: 0.5rem;
     display: flex;
     justify-content: center;
+}
+
+.btn {
+  background-color: #FFC107;
+  color: #fff;
+  font-weight: bold;
+  padding: 8px 16px;
+  border-radius: 4px;
+}
+
+#contact-button, #contact-btn {
+  margin-left: 0.5rem;
+  display: flex;
+  width: 50%;
+ 
 }
 
 .resume {
