--- a/src/Pages/Projects/Projects.css
+++ b/src/Pages/Projects/Projects.css
@@ -6,9 +6,30 @@
   align-items: center;
   gap: 20px;
   margin: 20px;
+  margin-top: 120px;
   max-width: 100%;
-
 }
+
+.title-container {
+  text-align: center;
+  margin-bottom: 40px;
+}
+
+.projectsh1{
+  position: absolute;
+  top: 110px;
+  left: 50%;
+  transform: translateX(-50%);
+  font-size: 2.5rem;
+  width: 88%;
+  text-align: center;
+  display: inline-block;
+  border-bottom: 2px solid black;
+  padding-bottom: 10px;
+  margin-bottom: 50px;
+}
+
+
 
 .project-container {
   height: 600px;
